implement goback navigation with react-router

--- a/prototyping/final-prototype/src/styles.css
+++ b/prototyping/final-prototype/src/styles.css
@@ -57,7 +57,8 @@ label {
 }
 
 button[type="submit"],
-input[type="submit"] {
+input[type="submit"],
+input[type="button"] {
   background: #ec5990;
   color: white;
   text-transform: uppercase;
@@ -70,6 +71,7 @@ input[type="submit"] {
 }
 
 button[type="submit"]:hover,
+input[type="button"]:hover,
 input[type="submit"]:hover {
   background: #bf1650;
 }
