--- a/prototyping/react-multi-step-form/src/App.css
+++ b/prototyping/react-multi-step-form/src/App.css
@@ -4,7 +4,7 @@
   align-items: center;
   flex-direction: column;
   height: 100vh;
-  background: #12c2e9;  /* fallback for old browsers */
+  background: #6c757d;
 }
 
 .form-container {
@@ -13,7 +13,7 @@
   padding: 30px 80px;
   max-width: 800px;
   margin: 0 auto;
-  box-shadow: 0 15px 16px .17px rgba(0,0,0,0.05);
+  box-shadow: 0 15px 16px 0.17px rgba(0, 0, 0, 0.05);
 }
 
 h1 {
