--- a/prototyping/react-multi-step-form/src/App.css
+++ b/prototyping/react-multi-step-form/src/App.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  height: calc(100vh - 72px);
   background: #6c757d;
 }
 
