--- a/prototyping/react-multi-step-form/src/App.css
+++ b/prototyping/react-multi-step-form/src/App.css
@@ -4,7 +4,7 @@
   align-items: center;
   flex-direction: column;
   height: calc(100vh - 72px);
-  background: #6c757d;
+  background: #8c8c8c;
 }
 
 .form-container {
