--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -59,6 +59,7 @@ $theme-colors: (
   "primary": $hu-green,
   "secondary": $hu-blue,
   "danger": $hu-red,
+  "hu-grey": $hu-grey,
 );
 
 // Import Bootstrap and its default variables
@@ -70,13 +71,13 @@ $theme-colors: (
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: calc(100vh - 72px);
-  background: #8c8c8c;
+  height: calc(100vh - 72px - 48px);
+  background: $hu-grey;
 }
 
 // form style
 .form-container {
-  background: #fff;
+  // background: #fff;
   border-radius: 20px;
   padding: 30px 80px;
   max-width: 800px;
