--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -92,7 +92,7 @@ $theme-colors: (
   justify-content: center;
   overflow: hidden;
   flex-direction: row-reverse;
-  height: 150px;
+  height: 100px;
   position: relative;
 
   > input {
@@ -125,4 +125,14 @@ $theme-colors: (
 
 .rating-0 {
   filter: grayscale(100%);
+}
+
+// rounded buttons
+.btn-circle {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  border-radius: 35px;
+  font-size: 24px;
+  line-height: 1.33;
 }
