--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -76,12 +76,12 @@ $input-color: black;
   align-items: center;
   flex-direction: column;
   height: calc(100vh - 72px - 48px);
-  background: $hu-grey-1;
+  background: $hu-grey;
 }
 
 // form style
 .form-container {
-  // background: #fff;
+  background: $hu-grey-1;
   border-radius: 20px;
   padding: 30px 80px;
   max-width: 800px;
