opinion scale question type with bootstrap pagination look

--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -163,6 +163,7 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+// remove padding on checkboxes styled as buttons
 .form-check {
   padding-left: 0;
 }
