--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -91,6 +91,7 @@ $input-color: black;
   max-width: 800px;
   margin: 0 auto;
   box-shadow: 0 15px 16px 0.17px rgba(0, 0, 0, 0.05);
+  caret-color: $hu-green;
 }
 
 // rating component
