--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -110,11 +110,12 @@ $input-color: black;
 .rating {
   display: flex;
   width: 100%;
-  justify-content: center;
+  justify-content: flex-end;
   overflow: hidden;
   flex-direction: row-reverse;
-  height: 100px;
+  height: 80px;
   position: relative;
+  margin-left: -5px;
 
   > input {
     display: none;
