--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -149,13 +149,13 @@ $input-color: black;
   filter: grayscale(100%);
 }
 
-// rounded buttons
-.btn-circle {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  font-size: 1.5rem;
-}
+// rounded buttons, use bootstrap rounder-cicle instead
+// .btn-circle {
+//   width: 50px;
+//   height: 50px;
+//   border-radius: 50%;
+//   font-size: 1.5rem;
+// }
 
 // labels
 h6 {
