--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -55,11 +55,11 @@ $hu-g1-h6: #3b9ea0;
     */
 
 @import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
-// Override default variables before the import
+// Override default variables before importing Bootstrap
 $headings-font-family: "Karla", sans-serif;
-$font-family-sans-serif: 'Quicksand', sans-serif;
+$font-family-sans-serif: "Quicksand", sans-serif;
 
 $theme-colors: (
   "primary": $hu-green,
@@ -69,8 +69,14 @@ $theme-colors: (
   "hu-grey-1": $hu-grey-1,
 );
 
+// inputs
 $input-bg: $hu-grey-1;
 $input-color: black;
+$input-placeholder-color: $hu-grey;
+
+// subtitles
+$text-muted: $hu-grey;
+$label-margin-bottom: 0; //so we have the same margin on question with inputs and with checkboxes(buttons)
 
 // Import Bootstrap and its default variables
 @import "~bootstrap/scss/bootstrap.scss";
@@ -85,7 +91,7 @@ $input-color: black;
   background: $hu-grey;
 }
 
-// form style
+// form container style
 .form-container {
   background: $hu-grey-1;
   border-radius: 20px;
@@ -159,11 +165,9 @@ $input-color: black;
 //   font-size: 1.5rem;
 // }
 
-// labels
-h6 {
-  font-weight: normal;
+// subtitles
+.subtitles {
   font-style: italic;
-  font-family: $font-family-sans-serif;
 }
 
 // remove arrows on input type number
