--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -46,6 +46,7 @@ $enable-responsive-font-sizes: true;
   border: 0;
   padding: 0;
   box-shadow: 0 3px 2px -2px $hu-green; // whatever you set the blur to (3rd value), set the spread (4th value) to the negative of it to have it only show on the bottom
+  border-radius: 0;
 
   &:focus {
     border: 0;
