write custom media queries to resize opinion scale on phone

--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -116,3 +116,10 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+// resize opinion scale on phone
+@media screen and (max-width: 540px) {
+  .page-link {
+    padding: 2px 2px;
+  }
+}
