rename speech-bubble class to account for question and answer

--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -118,10 +118,10 @@ input[type="number"] {
 }
 
 // speech bubble for questions
-.speech-bubble {
+.speech-bubble-question {
   position: relative;
 }
-.speech-bubble:after {
+.speech-bubble-question:after {
   content: "";
   position: absolute;
   left: 0;
