change opinion scale paddings to fit iphone-5

--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -167,7 +167,7 @@ input[type="number"] {
 }
 @media screen and (max-width: 540px) {
   .page-link {
-    padding: 4px 4px;
+    padding: 3px;
   }
   .avatar {
     font-size: 2rem;
