longtext question type

--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -117,6 +117,12 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+// remove resize corner on textarea
+textarea {
+  resize: none;
+}
+
+
 // speech bubble for questions
 .speech-bubble-question {
   position: relative;
