add t&c checkbox to recap

--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -40,6 +40,10 @@ $enable-responsive-font-sizes: true;
 // Import Bootstrap and its default variables
 @import "~bootstrap/scss/bootstrap.scss";
 
+:disabled {
+  cursor: not-allowed;
+}
+
 // input style
 .form-control {
   caret-color: $hu-green;
