--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -44,6 +44,10 @@ $enable-responsive-font-sizes: true;
   cursor: not-allowed;
 }
 
+.btn-lg {
+  border-radius: 0.3rem;
+}
+
 // input style
 .form-control {
   caret-color: $hu-green;
