--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -53,8 +53,9 @@ $enable-responsive-font-sizes: true;
   caret-color: $hu-green;
   border: 0;
   padding: 0;
-  box-shadow: 0 3px 2px -2px $hu-green; // whatever you set the blur to (3rd value), set the spread (4th value) to the negative of it to have it only show on the bottom
   border-radius: 0;
+  border-bottom: 2px solid $hu-green;
+  // box-shadow: 0 3px 2px -2px $hu-green; // whatever you set the blur to (3rd value), set the spread (4th value) to the negative of it to have it only show on the bottom
 
   &:focus {
     border: 0;
