--- a/prototyping/react-multi-step-form/src/custom.scss
+++ b/prototyping/react-multi-step-form/src/custom.scss
@@ -129,6 +129,7 @@ input[type="number"] {
 // remove resize corner on textarea
 textarea {
   resize: none;
+  overflow: hidden;
 }
 
 // speech bubble for questions
